// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PagerComponent should render properly for a double truncated pager 1`] = `
"<ul><li><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a data-page=\\"Previous\\"><span>Previous</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><!--bindings={
  \\"ng-reflect-ng-for-of\\": \\"0,-1,5,6,7,8,9,-1,19\\"
}--><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 1\\" data-page=\\"1\\"><span>1</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><span>...</span></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 6\\" data-page=\\"6\\"><span>6</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"page\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 7\\" data-page=\\"7\\"><span>7</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 8\\" data-page=\\"8\\"><span>8</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 9\\" data-page=\\"9\\"><span>9</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 10\\" data-page=\\"10\\"><span>10</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><span>...</span></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 20\\" data-page=\\"20\\"><span>20</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a data-page=\\"Next\\"><span>Next</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li></ul>"
`;

exports[`PagerComponent should render properly for simple pager 1`] = `
"<ul><li><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a data-page=\\"Previous\\"><span>Previous</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><!--bindings={
  \\"ng-reflect-ng-for-of\\": \\"0,-1,3,4,5,6,7,8,9\\"
}--><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 1\\" data-page=\\"1\\"><span>1</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><span>...</span></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 4\\" data-page=\\"4\\"><span>4</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"page\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 5\\" data-page=\\"5\\"><span>5</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 6\\" data-page=\\"6\\"><span>6</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 7\\" data-page=\\"7\\"><span>7</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 8\\" data-page=\\"8\\"><span>8</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 9\\" data-page=\\"9\\"><span>9</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li aria-current=\\"\\"><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a href=\\"javascript:void(0);\\" aria-label=\\"Go to 10\\" data-page=\\"10\\"><span>10</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li><li><!--bindings={
  \\"ng-reflect-ng-if\\": \\"true\\"
}--><a data-page=\\"Next\\"><span>Next</span></a><!--bindings={
  \\"ng-reflect-ng-if\\": \\"false\\"
}--></li></ul>"
`;
